add json parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,12 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "chrono": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "ranges": "cpp",
+        "compare": "cpp",
+        "complex": "cpp",
+        "concepts": "cpp",
+        "cstring": "cpp",
+        "map": "cpp"
     }
 }
