--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
-    "population_size" : 20,
-    "nbr_timesteps" : 50,
+    "population_size" : 40,
+    "nbr_timesteps" : 100,
+    "dt_days" : 0.5,
+    "infection_duration_days": 10,
     "dimension_x" : 5.0,
     "dimension_y" : 3.0,
     "moving_speed" : 0.1,
-    "infection_probability" : 0.5,
+    "infection_probability_day" : 0.5,
     "infection_radius" : 0.5
 }
