extract random class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,9 @@
         "cstring": "cpp",
         "map": "cpp",
         "codecvt": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
