--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,8 @@
         "codecvt": "cpp",
         "iomanip": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "core": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
