add catch library for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
-cmake_minimum_required(VERSION 3.13)
+# set one only! (use header for convenience)
+set(CatchLibH "Header-only")
+#set(CatchLibV "VCPKG") # only to test using library
 
+cmake_minimum_required(VERSION 3.13)
+if(CatchLibV)
+    set(CMAKE_TOOLCHAIN_FILE "/home/adria/dev/vcpkg/scripts/buildsystems/vcpkg.cmake")
+endif()
 # set the project name
 project(InfectionModelling VERSION 0.1)
-
-# add the executable
-add_executable(InfectionModelling main.cpp)
 
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 17)
@@ -16,14 +19,29 @@ add_subdirectory(Population)
 
 # Find at least version 3.3 of Eigen3
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
-#
-target_link_libraries (InfectionModelling PUBLIC Population)
 
+# add the executable
+add_executable(InfectionModelling main.cpp)
+
+# add testing executable
+if(CatchLibV)
+    find_package(Catch2 CONFIG REQUIRED)
+    add_executable(tests ./tests/test.cpp)
+    target_link_libraries(tests PRIVATE Catch2::Catch2 Population)
+endif()
+if(CatchLibH)
+    add_executable(tests ./tests/test.cpp ./tests/catch_amalgamated.cpp)
+    target_link_libraries(tests PRIVATE Population)
+endif()
+
+# link libraries
+target_link_libraries (InfectionModelling PUBLIC Population)
 target_link_libraries(Population Eigen3::Eigen)
 
-# add the binary tree to the search path for include files
-# so that we will find TutorialConfig.h
+# add the header search path for include files, such that we find the Population header files
 target_include_directories(InfectionModelling PUBLIC
                           "${PROJECT_BINARY_DIR}"
                           "${PROJECT_SOURCE_DIR}/Population"
                           )
+target_include_directories(tests PRIVATE "${PROJECT_BINARY_DIR}"
+                          "${PROJECT_SOURCE_DIR}/Population")
