--- a/config.json
+++ b/config.json
@@ -1,11 +1,1 @@
-{
-  "population_size": "100",
-  "nbr_timesteps": "10",
-  "dt_days": "0.01",
-  "infection_duration_days": "10",
-  "dimension_x": "1",
-  "dimension_y": "1",
-  "moving_speed": "1",
-  "infection_probability_day": "0.5",
-  "infection_radius": "0.5"
-}
+{"population_size":"100","nbr_timesteps":"100","infection_duration_days":"2","moving_speed":"0.3","infection_probability_day":"0.3","infection_radius":"0.1","initial_infection_proportion":"0.1","dt_days":0.1,"dimension_x":1,"dimension_y":1}
